manifests/prod/homepage/Deployment-homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: HOMEPAGE_ALLOWED_HOSTS
              value: home.k3s.lan
          image: ghcr.io/gethomepage/homepage:v1.13.2
          name: homepage
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: config-dir
            - mountPath: /app/config/settings.yaml
              name: config
              subPath: settings.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: config
              subPath: kubernetes.yaml
            - mountPath: /app/config/widgets.yaml
              name: config
              subPath: widgets.yaml
            - mountPath: /app/config/services.yaml
              name: config
              subPath: services.yaml
            - mountPath: /app/config/bookmarks.yaml
              name: config
              subPath: bookmarks.yaml
            - mountPath: /app/config/docker.yaml
              name: config
              subPath: docker.yaml
      serviceAccountName: homepage
      volumes:
        - configMap:
            name: homepage
          name: config
        - emptyDir: {}
          name: config-dir
