manifests/prod/homepage/Service-homepage.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: homepage
  type: ClusterIP
