manifests/prod/homepage/Ingress-homepage.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
  name: homepage
  namespace: homepage
spec:
  ingressClassName: traefik
  rules:
    - host: home.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: homepage
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - home.k3s.lan
      secretName: homepage-tls
